TStar Changelog
===============

Version 1.7.0
-------------
- Improved threading system with per-task cancellation and priority work queue
- Updated continuum subtraction tool
- New tool: multiscale decomposition
- New tool: narrowband normalization
- New tool: narrowband to rgb stars

Version 1.6.4
-------------
- Update to the add/recombine luminance tool
- Updated the aberration inspection tool
- Updated star finder algorithm in AstroSpike and rendering style
- Added a more robust algorithm for plate solving and color calibration
- improvements to the stacking suite
- Now you can open raw camera files in the app
- New small tool: align channels
- Minor bugfixes

Version 1.6.3
-------------
- New histogram visualization in ght, curves and histogram transformation tools
- New star recomposition tool interface

Version 1.6.2
-------------
- Now you can select the target median for display stretch
- Small display stretch artifacts in very bright areas fixed
- Other small bugfixes

Version 1.6.1
-------------
- Now every section remembers its own last working directory at restart

Version 1.6.0
-------------
- AstroSpike tool update: now uses OpenCV for maximum quality and performance
- Added system resources monitor
- Added coordinate/RGB display on image mouse over
- Updated ABE tool, now keeps the darkest background value
- Updated background with shortcuts, an illustration and app signature
- New version of Cosmic Clarity available
- Now you can directly download Cosmic Clarity models from the settings dialog
- Integrated AMD/Intel GPUs now correctly work when using AI models
- Darker overall theme
- Added personal links in the info section
- Added some missing translations

Version 1.5.12
--------------
- Other small bugfixes

Version 1.5.11
--------------
- Some minor bugfixes across the app

Version 1.5.10
--------------
- Fixed a crash when trying to display stretch a b/w image
- Fixed zoom resetting bug when toggling image preview in a tool